--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -1,7 +1,7 @@
 .header {
   border-bottom: 1px solid gray;
   display: flex;
-  padding: 10px;
+  padding: 10px 0;
   position: -webkit-sticky;
   position: sticky;
   width: 100%;
