--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -12,3 +12,12 @@
   width: 100px;
   height: 25px;
 }
+
+@media (min-width: 920px) {
+  .logo-image {
+    width: 120px;
+    height: 37px;
+    padding-left: 60px;
+  }
+
+}
