--- a/src/components/filters/styles.css
+++ b/src/components/filters/styles.css
@@ -6,14 +6,15 @@
   font-size: 30px;
 }
 
-.article-box {
+.filter-box{
   align-items: center;
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  position: relative;
 }
 
-.filters {
+.button-filters-mobile{
   display: flex;
   flex-direction: row;
 }
@@ -23,4 +24,38 @@
   width: 140px;
   border: 1px solid gray;
   background: transparent;
+}
+
+.button-filters-pc {
+  display: block;
+}
+
+@media (min-width: 920px) {
+  .button-filter { 
+    display: none;
+  }
+
+  .filter-box {
+    align-items: flex-start;
+  }
+
+  .colors-filter {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .button-filters-pc {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .size-filter {
+    display: grid;
+    grid-template-columns: 25% auto auto 25%;
+  }
+
+  .price-filter {
+    display: flex;
+    flex-direction: column;
+  }
 }
