--- a/src/components/main/styles.css
+++ b/src/components/main/styles.css
@@ -3,3 +3,11 @@
   flex-direction: column;
   height: 1000px;
 }
+
+@media (min-width: 920px) {
+  .main{
+    flex-direction: row;
+    padding: 40px;
+  }
+
+}
