adding accordion and shopping bag

--- a/src/components/cards/styles.css
+++ b/src/components/cards/styles.css
@@ -2,7 +2,6 @@
   display: grid;
   line-height: 25%;
   grid-template-columns: 50% 50%;
-  padding: 20px;
   width: 100%;
 }
 
@@ -42,6 +41,8 @@
 
 @media (min-width: 920px) {
   .card-box {
-    grid-template-columns: 25% auto 25%;
+    grid-template-columns: 40% auto 40%;
+    grid-template-rows: 34% auto 34%;
   }
+
 }
