--- a/src/components/main/styles.css
+++ b/src/components/main/styles.css
@@ -1,13 +1,22 @@
 .main {
   display: flex;
   flex-direction: column;
-  height: 1000px;
+}
+
+.section-card-button {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 @media (min-width: 920px) {
   .main{
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 30% 70%;
     padding: 40px;
   }
 
+  .section-card-button {
+    display: flex;
+  }
 }
