--- a/src/components/filters/styles.css
+++ b/src/components/filters/styles.css
@@ -79,7 +79,7 @@
 }
 
 .size-filter {
-  align-items: start;
+  align-items: flex-start;
   border: none;
   display: grid;
   grid-template-columns: 0 13% 0% 13% 0% 13% 0% 0;
@@ -160,7 +160,7 @@ input[type="checkbox"]:checked+label {
   .title {
     display: flex;
     padding: 0;
-    justify-content: start;
+    justify-content: flex-start;
     margin: 0;
     margin-bottom: 20px;
   }
