--- a/src/components/filters/styles.css
+++ b/src/components/filters/styles.css
@@ -192,7 +192,7 @@ input[type="checkbox"]:checked+label {
     align-items: center;
     border: none;
     display: grid;
-    grid-template-columns: 0 15% 0% 15% 0% 15% 0% 0;
+    grid-template-columns: 0 33% 0 33% 0 33% 0 0;
     grid-template-rows: 35% 36% 35%;
     margin: 20px 0;
   }
